name:                hsdup
version:             0.1.0.0
license-file:        LICENSE
author:              Vladimir Kirillov
maintainer:          proger@hackndev.com
build-type:          Simple
cabal-version:       >=1.10

executable hsdup
  main-is:             dup.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7, directory-tree, cryptohash, bytestring, containers, filepath
  -- hs-source-dirs:      
  default-language:    Haskell2010
